<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Selamat datang di Dicoding Story App!</string>
    <string name="title_welcome_page">Dicoding Story App</string>
    <string name="title_signup_page">Isi Data Berikut Untuk Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error">Password minimal 6 karakter</string>
    <string name="email_error">Format Email Tidak Sesuai</string>
    <string name="message_login_page">Isi data dengan benar ya!</string>
    <string name="title_login_page">Yuk Login Terlebih Dahulu</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="message_main_page">Selamat Datang Di Dicoding Story App.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="loading">Loading…</string>
    <string name="image_story">Image Story</string>
    <string name="user">User</string>
    <string name="created_at">Created At</string>
    <string name="description">Description</string>
    <string name="tambah_story_baru">Tambah Story Baru</string>
    <string name="add_image_story">Add Image Story</string>
    <string name="camera">CAMERA</string>
    <string name="galery">GALERY</string>
    <string name="upload">UPLOAD</string>
    <string name="language">Language</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>

</resources>